--- a/signin.html
+++ b/signin.html
@@ -231,7 +231,7 @@ footer {
 </style>
 
 <!-- JS -->
-<script src="scripts/validation.js" defer></script>
+<script src="validation.js" defer></script>
 </head>
 
 <body onload="pageLoaded()">
